<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:background="@color/Azure"
    tools:context=".Model">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/nova"/>
    <TextView
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/izborModela" />
    <RadioGroup
        android:id="@+id/RG1"
        android:layout_below="@+id/model"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/rb1"
            android:text="@string/A4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb2"
            android:text="@string/A5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/gorivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/izborGoriva"
        android:layout_below="@id/RG1"/>
    <RadioGroup
        android:id="@+id/RG2"
        android:layout_below="@id/gorivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/rb3"
            android:text="@string/dizel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb4"
            android:text="@string/benzin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>
    <TextView
        android:id="@+id/dodatnaOprema"
        android:layout_below="@id/RG2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/DodatnaOprema"/>
    <CheckBox
        android:id="@+id/CB1"
        android:layout_below="@+id/dodatnaOprema"
        android:text="@string/xenon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/CB2"
        android:layout_below="@id/CB1"
        android:text="@string/parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Prosledi"
        android:layout_below="@+id/CB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/dugmeProsledi" />

</RelativeLayout>