<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Azure"
    android:paddingTop="20dp"
    android:paddingLeft="10sp"
    tools:context=".A5">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10sp"
         />
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/textView22"
        android:layout_centerInParent="true"
        android:paddingBottom="20dp"
        android:text="@string/snagaMotora"/>
    <RadioGroup
        android:id="@+id/RG5"
        android:layout_below="@id/textView3"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/peti"
            android:text="@string/snaga2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/sesti"
            android:text="@string/snaga3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/sedmi"
            android:text="@string/snaga4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/osmi"
            android:text="@string/snaga5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <Button
        android:id="@+id/Posalji2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RG5"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:text="@string/posalji"/>

    <EditText
        android:id="@+id/izborModela1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Posalji2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/izborModela1"
        android:layout_centerInParent="true"
        android:id="@+id/VratiSe1"
        android:layout_marginTop="20dp"
        android:text="@string/vratiSe"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VratiSe1"
        android:layout_centerInParent="true"
        android:id="@+id/Zavrsi1"
        android:layout_marginTop="20dp"
        android:text="@string/zavrsi"/>

</RelativeLayout>

